--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -6,7 +6,7 @@
       "name": "Final_Project.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/suphalaksana/data_viz_2022/blob/main/Final_Project.ipynb",
-      "authorship_tag": "ABX9TyMNeyKvSrOsGvne0PKPm/Um",
+      "authorship_tag": "ABX9TyOqEsTcXTrPYBC6wCsZFndX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "hOjLQXXWiF6b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
         "id": "UlBbnkLnkJ3r",
         "outputId": "00b941af-e7c8-44f5-9fdb-9a50400f5db1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
         "id": "_tA7HR9D7B_W",
         "outputId": "38f4269e-3c56-44fe-bad5-1d256c67dc08"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
         "id": "redqKboMkkMb",
         "outputId": "1ab77a48-cb9f-4b41-cb85-1ecf93f2fc6d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -512,7 +512,7 @@
         "id": "Djr_OjYa9SXv",
         "outputId": "6f274825-83b8-454a-eddd-31fdfc04264c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -569,7 +569,7 @@
         "id": "D-lZYjSozScR",
         "outputId": "29326b11-933f-4b50-c237-f680c2fd40be"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -800,7 +800,7 @@
         "id": "TzKMM5-u2be7",
         "outputId": "2d0ade91-4768-43fb-ab27-1ac6834a5f67"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -842,7 +842,7 @@
       "metadata": {
         "id": "gJ47wMOz2i-d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -857,7 +857,7 @@
         "id": "OObZkrik6DLm",
         "outputId": "8e9ff2de-86ca-4a0a-c357-b4e2aaf453d6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -906,7 +906,7 @@
         "id": "TjiCrA1m6mg2",
         "outputId": "9c6af3af-ab01-4137-f446-90d47a776edd"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1251,7 +1251,7 @@
         "id": "VT0X9tgX-FfI",
         "outputId": "43b4978d-83a5-45eb-9618-5eae3345980f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1308,7 +1308,7 @@
         "id": "shJecafj-L4W",
         "outputId": "33a2dd3e-c389-41e5-eac8-80ce82dda845"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1649,7 +1649,7 @@
       "metadata": {
         "id": "wU_53tns-eds"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1664,7 +1664,7 @@
         "id": "4IuJ26yY-wMD",
         "outputId": "17b3fe8f-7b57-417d-d27b-eba9906deb75"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1722,7 +1722,7 @@
         },
         "outputId": "bc858c0b-64a9-42dd-adbc-4c18b3aea0c8"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2079,7 +2079,7 @@
         "outputId": "e07e397f-1dd3-47b6-bf88-f24ec7bf4224",
         "id": "sRnFwoeNgF7S"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2137,7 +2137,7 @@
         "outputId": "467b0f43-aecc-4ede-c910-c6b1ce841ac1",
         "id": "zbjnf4WKgWQM"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2379,7 +2379,7 @@
       "metadata": {
         "id": "n-VPvL8xg4z5"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2394,7 +2394,7 @@
         "outputId": "c6357585-c629-443f-f2dd-f0f24115b604",
         "id": "UJnqbjdehAdB"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2434,7 +2434,7 @@
       "source": [
         "# confirmed-cases 4\n",
         "\n",
-        "ตั้งแต่วันที่ 26/10/2021  - วันที่ 27/02/2022"
+        "ตั้งแต่วันที่ 28/02/20222  - วันที่ 18/03/2022"
       ],
       "metadata": {
         "id": "Rh6Lmsm_jq89"
@@ -2453,7 +2453,7 @@
         "id": "IbtovtG_hCRI",
         "outputId": "1c9f46d3-4bba-4d0e-90aa-b422e79415d8"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2798,7 +2798,7 @@
         "outputId": "8ff0e10b-d7e5-4cca-8f54-27966acf9dc9",
         "id": "RzrEIbs8khxO"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2855,7 +2855,7 @@
         "outputId": "7428cd51-348d-43da-f8a2-d026a1b8a84a",
         "id": "gAKGcJc3kvtS"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3091,7 +3091,7 @@
       "metadata": {
         "id": "eIf_qrUSlWUl"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3106,7 +3106,7 @@
         "outputId": "084bbd07-6822-4c16-abfa-f1a87f1778ba",
         "id": "Wkt9V9-7lgwY"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3167,12 +3167,11 @@
       "metadata": {
         "id": "IcM5YzYFuzNo",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "592af28a-83fa-4aba-e9ab-6e20fa621611"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3514,12 +3513,11 @@
       "metadata": {
         "id": "WgQYdLYnzeZt",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "37cf604d-5504-4d33-f503-411302be8117"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3886,12 +3884,11 @@
       "metadata": {
         "id": "imWthlGczjzG",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "267fb5fd-f058-4b51-cc91-169249bbdb6b"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4248,7 +4245,7 @@
         "id": "s86DffSBdjB2",
         "outputId": "3354eb6d-45a1-4412-af57-20c8363fc533"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4756,7 +4753,7 @@
       "metadata": {
         "id": "f-kRS6KUbdVg"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4771,7 +4768,7 @@
         },
         "outputId": "eaa14b38-6868-4dfc-daed-38dc0a851961"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4884,7 +4881,7 @@
       "metadata": {
         "id": "KWIzdg6yykfj"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4895,13 +4892,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "79uiHCp_ePMz",
         "outputId": "24dff2cb-2435-480d-c26d-b04bae1a1cc4"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5114,7 +5110,7 @@
         "id": "cPXY0FNyzEeB",
         "outputId": "285f950f-0250-4cf9-99fd-0a33c4188a9e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5501,7 +5497,7 @@
         "id": "IM2438xKvbmt",
         "outputId": "e5ba9d98-b3aa-43d3-a553-e75da2b1e9b1"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5874,7 +5870,7 @@
         "id": "zK6LxIyMC9Hk",
         "outputId": "623a065a-e910-4677-95d1-7433c609f9f0"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5915,7 +5911,7 @@
         "id": "qmxX7Pn5DGPU",
         "outputId": "f54f137b-ed5a-40af-d456-bd60d2e651be"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6288,7 +6284,7 @@
         "id": "SCYxxAZmDaNr",
         "outputId": "eeae214e-7c50-4ddd-8cad-c1addb279d09"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6323,7 +6319,7 @@
       "metadata": {
         "id": "4UbgDnrYd3PZ"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6340,7 +6336,7 @@
           "height": 423
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6603,7 +6599,7 @@
         "id": "mXeu-fVzBoCo",
         "outputId": "730bcbd0-5854-4242-f90c-99e7d458c933"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6635,7 +6631,7 @@
         "id": "D5hJ-Rl-A5VS",
         "outputId": "8c259cf5-137e-4b6f-a5fa-af0d70aecfce"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6661,7 +6657,7 @@
         "id": "7lMRcPKABMPN",
         "outputId": "13b34494-7778-4512-b3c0-233727c99bb7"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6688,7 +6684,7 @@
         "id": "LtITUA99Enu5",
         "outputId": "0faa8eca-88c0-4ecb-ed0f-ecb6356b4485"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6725,7 +6721,7 @@
         "id": "rqIS9_RrcQmW",
         "outputId": "72f5efca-073d-4cba-8aa1-fee5083e6771"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6988,7 +6984,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7022,7 +7018,7 @@
         "id": "EMP_yWHgtACO",
         "outputId": "dfad10ee-0037-45bb-c206-38c4866bc1d1"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7385,7 +7381,7 @@
         "id": "WbqoatmiyHVI",
         "outputId": "e68bb24f-811c-4a70-a720-7b5c0348b3a4"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7746,7 +7742,7 @@
         "id": "pP4HH9EwDW_R",
         "outputId": "4f985e6b-92b9-45d1-eff5-c62b47b80091"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7775,7 +7771,7 @@
         "id": "2GpcBzCsMikr",
         "outputId": "87e67adc-5acb-445a-ba45-762e03ac3e9a"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8138,7 +8134,7 @@
         "id": "5H-aIXWrxF62",
         "outputId": "5b5c2945-4763-4270-ce8b-b693723fe589"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8335,7 +8331,7 @@
         "id": "uRqmhUwILdcl",
         "outputId": "c3484280-16c7-410e-b170-ab4aba6e2946"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8698,7 +8694,7 @@
         "id": "NbptOfKm0K3b",
         "outputId": "bc1d6cfd-9f49-4a51-9fe8-ec3e1de17c65"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9061,7 +9057,7 @@
         "id": "KvWKhoYedfOz",
         "outputId": "44393695-d6f4-4fbb-fea3-c15166ef7cc7"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9424,7 +9420,7 @@
         "id": "LXhDXrN13Mj5",
         "outputId": "04860dae-d222-4588-90e1-db86ecd5b7d0"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9787,7 +9783,7 @@
         "id": "PO_ju6Sre7mQ",
         "outputId": "e87cf6c2-431b-41b6-ca2c-ee8729aaffad"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10150,7 +10146,7 @@
           "height": 589
         }
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10513,7 +10509,7 @@
         "id": "krx_ulSuOY-1",
         "outputId": "10353d73-4ddd-4b56-aba4-16d2af690b50"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10876,7 +10872,7 @@
         "id": "edDB_j-WfYLE",
         "outputId": "62b3ea42-0034-480f-8f27-11abf2d647a6"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11239,7 +11235,7 @@
         "id": "JEQJ4pf1eFh7",
         "outputId": "1cba13ba-75d5-457f-9806-4307274bdc5b"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11589,7 +11585,7 @@
         "id": "n7vlMgtqeO9s",
         "outputId": "18c1002e-940d-4994-d3e8-c0d5e051e49e"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11952,7 +11948,7 @@
         "id": "iH6fPiTYeQBs",
         "outputId": "d1ab575b-3de2-4991-8f8c-a73297c66919"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12319,7 +12315,7 @@
       "metadata": {
         "id": "VfBe1Gjagw4R"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     }
   ]
