--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -6,7 +6,7 @@
       "name": "Final_Project.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/suphalaksana/data_viz_2022/blob/main/Final_Project.ipynb",
-      "authorship_tag": "ABX9TyOqEsTcXTrPYBC6wCsZFndX",
+      "authorship_tag": "ABX9TyNCLJCaMNOSCZjct6bgJxO8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,32 @@
       ],
       "metadata": {
         "id": "N0MtHLEtiNKa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dashboard\n",
+        "\n",
+        "https://datastudio.google.com/reporting/9afd59d0-81e6-4fc6-a25a-c69f68e8c94b/page/35poC?fbclid=IwAR34BBT_ivJyGuPE0sbbgjspvoVI9DhIsFBGeSHqCYttJ5j99S4LzuRhwMY"
+      ],
+      "metadata": {
+        "id": "HSWFLnYWjops"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# รายชื่อสมาชิกในกลุ่ม\n",
+        "\n",
+        "623020535-7 นางสาววัชราภรณ์ นามมุงคุณ  SI  \n",
+        "\n",
+        "623020540-4 นางสาวศุภลักษณา บัวจันทร์  SI\n",
+        "\n",
+        "623020732-5 นางสาวญาดา สรณะสมบูรณ์  STAT"
+      ],
+      "metadata": {
+        "id": "eTD0s6LckEP7"
       }
     },
     {
